# 3dica

./: .gitignore  CMakeLists.txt  README.md
VS2015/3dica/: 3dica.sln
VS2015/3dica/3dica/: 3dica.vcxproj  3dica.vcxproj.filters
cmake/Modules/: FindSDL2.cmake  FindSDL2_image.cmake
src/: 3dica.rc  CMakeLists.txt  main.cpp
